# Zephyr-CAN-Gateway

./: README.md
.devcontainers/: devcontainer.json  setup.sh
app/: CMakeLists.txt  prj.conf
app/src/: can_router.c  filter.c  main.c  uart_diagnostics.c
